--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   bio              : "PhD Candidate, Statistics"
   location         : "Ames, IA, USA"
   employer         : "Iowa State University"
-  uri              : # URL
+  uri              : "https://yanhanchen.github.io"
   email            : "yanhanc@iastate.edu"
 
   # Academic websites
@@ -66,7 +66,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : yan-han-chen-28071b199
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
